@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.444 2010-05-25 04:39:38 guru Exp $
+ *	$Id: gmt_init.c,v 1.445 2010-06-28 21:58:43 guru Exp $
  *
  *	Copyright (c) 1991-2010 by P. Wessel and W. H. F. Smith
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -5398,7 +5398,7 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 	static char *allowed_symbols[2] = {"-+aAbBCcDdeEfGgHhIijJmNnpqrSsTtVvwWxy", "-+aAbCcDdeEfGgHhIijJmNnoOpqrSsTtuUVvwWxy"};
 	static char *bar_symbols[2] = {"bB", "-bBoOuU"};
 
-	p->n_required = p->convert_angles = 0;
+	p->n_required = p->convert_angles = p->n_nondim = 0;
 	p->user_unit = p->shrink = p->read_vector = p->base_set = FALSE;
 
 	if (!text[0]) {	/* No symbol or size given */
@@ -5564,9 +5564,12 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 			break;
 		case 'E':	/* Expect axis in km to be scaled based on -J */
 			p->convert_angles = 1;
+			p->nondim_col[p->n_nondim++] = 3 + mode;	/* Since they are in km, not inches or cm etc */
+			p->nondim_col[p->n_nondim++] = 4 + mode;
 		case 'e':
 			p->symbol = GMT_SYMBOL_ELLIPSE;
 			p->n_required = 3;
+			p->nondim_col[p->n_nondim++] = 2 + mode;
 			check = FALSE;
 			break;
 
@@ -5669,10 +5672,13 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 			break;
 		case 'J':	/* Expect dimensions in km to be scaled based on -J */
 			p->convert_angles = 1;
+			p->nondim_col[p->n_nondim++] = 3 + mode;	/* Since they are in km, not inches or cm etc */
+			p->nondim_col[p->n_nondim++] = 4 + mode;
 		case 'j':
 			p->symbol = GMT_SYMBOL_ROTATERECT;
 			p->n_required = 3;
 			check = FALSE;
+			p->nondim_col[p->n_nondim++] = 2 + mode;
 			break;
 		case 'l':
 			p->symbol = GMT_SYMBOL_TEXT;
@@ -5708,6 +5714,8 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 					break;
 			}
 			p->size_x = p->given_size_x = p->size_y = p->given_size_y = GMT_convert_units (&text[k], GMT_INCH);
+			p->nondim_col[p->n_nondim++] = 2 + mode;
+			p->nondim_col[p->n_nondim++] = 3 + mode;
 			break;
 		case 'N':
 			p->equal_area = TRUE;	/* To equal area of circle with same size */
@@ -5776,22 +5784,26 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 				case 'h':	/* Input (x,y) refers to vector head (the tip), single head */
 					p->v_just = 2;
 					one = 2;
+					p->nondim_col[p->n_nondim++] = 2 + mode;
 					break;
 				case 'B':	/* Input (x,y) refers to balance point of vector, double heads */
 					p->v_double_heads = TRUE;
 				case 'b':	/* Input (x,y) refers to balance point of vector, single head */
 					p->v_just = 1;
 					one = 2;
+					p->nondim_col[p->n_nondim++] = 2 + mode;
 					break;
 				case 'T':	/* Input (x,y) refers to tail of vector, double heads */
 					p->v_double_heads = TRUE;
 				case 't':	/* Input (x,y) refers to tail of vector [Default], single head */
 					p->v_just = 0;
 					one = 2;
+					p->nondim_col[p->n_nondim++] = 2 + mode;
 					break;
 				default:	/* No modifier given, default to tail, single head */
 					p->v_just = 0;
 					one = 1;
+					p->nondim_col[p->n_nondim++] = 2 + mode;
 					break;
 			}
 			for (j = one; text[j] && text[j] != 'n'; j++);
@@ -5834,6 +5846,8 @@ GMT_LONG GMT_parse_symbol_option (char *text, struct GMT_SYMBOL *p, GMT_LONG mod
 		case 'w':
 			p->symbol = GMT_SYMBOL_PIE;
 			p->n_required = 2;
+			p->nondim_col[p->n_nondim++] = 2 + mode;
+			p->nondim_col[p->n_nondim++] = 3 + mode;
 			break;
 		case 'r':
 			p->symbol = GMT_SYMBOL_RECT;
